# personalPrj

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  실행가이드.md
reference_doc/: wordPress.md
src/apps/cli/: main.py
src/core/: config.py  models.py
src/generators/: image_generator.py  openai_generator.py
src/interfaces/: content_generator.py  quality_checker.py  wordpress_client.py
src/quality/: checkers.py
src/services/: blog_service.py  database_service.py
src/wp_client/: client.py
